--- a/public/themes/default.less
+++ b/public/themes/default.less
@@ -881,6 +881,88 @@ body,
     }
 }
 
+// attach-modal
+.attach-modal .modal-dialog {
+    width: auto !important;
+    position: absolute;
+    /* width: 100%; */
+    /* height: 100%; */
+    left: 5px;
+    right: 5px;
+    top: 30px;
+    bottom: 30px;
+    .modal-content {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        overflow: scroll; 
+        .modal-header .modal-title {
+            text-align: center
+        }       
+        .close {
+            position: absolute;
+            right: 10px;
+            top: 0;
+            padding: 10px 15px;
+        }
+        .modal-body {
+            position: absolute;
+            top: 40px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 0;
+            .attach-header-wrap {                
+                position: absolute;
+                top: 20px;
+                height: 80px;
+                overflow-y: auto;
+                right: 20px;
+                left: 20px;                
+                .attach-header-element {
+                    border-top: none;
+                    &.active,
+                    &:hover {
+                        color: #000;
+                        background-color: rgb(146, 53, 53);
+                        border-color: rgb(133, 68, 68);
+                    }
+                }                
+            }
+            .attach-content-wrap {
+                position: absolute;
+                top: 90px;
+                bottom: 0;
+                right: 10px;
+                left: 10px;
+                
+                .attach-content {
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    right: 0;
+                    left: 0;
+                    -webkit-user-select: text;
+                    padding-top: 5px;
+                    padding-right: 5px;
+                    padding-left: 10px;
+                    overflow-y: auto;
+                    iframe {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                
+            }
+        }
+    }
+}
+
+
 .mce-item-table,
 .mce-item-table td,
 .mce-item-table th,
