--- a/public/themes/themes/pebbles_night/theme.less
+++ b/public/themes/themes/pebbles_night/theme.less
@@ -2,5 +2,5 @@
 
 #leftNotebook {
   background: url(images/left_bg.jpg) no-repeat !important;
-  background-size: 100% auto !important;
+  background-size: 100% 100% !important;
 }
