--- a/public/themes/themes/wood/theme.less
+++ b/public/themes/themes/wood/theme.less
@@ -2,7 +2,7 @@
   background: none !important;
   background-color: rgba(37, 49, 62, 0.96) !important;
   background: url(images/wood@2x.jpg) no-repeat !important;
-  background-size: 100% auto !important;
+  background-size: 100% 100% !important;
 }
 .folderHeader .fa-left,
 .folderHeader span {
