--- a/public/themes/basic.less
+++ b/public/themes/basic.less
@@ -825,12 +825,47 @@ h3 {
     }
 }
 
-#linknoteMenu {
+#linknoteMenu, #mce_linknoteMenu{
     width: 400px;
     padding: 10px 5px;
 }
 
-#linknoteList {
+#linknotesearchWrap, #mce_linknotesearchWrap {
+    margin: 0;
+    padding: 0;
+    height: 45px;
+    .search-text {
+        margin: 1px;
+        width: 300px;
+        padding: 6px 12px;
+        font-size: 14px;
+        line-height: 1.428571429;
+        color: #555555;
+        vertical-align: middle;
+        background-color: #ffffff;
+        background-image: none;
+        border: 1px solid #cccccc;
+        border-radius: 4px;        
+    }
+    .search-text:focus {
+        border-color: #66afe9;
+        outline: 0;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+    }
+
+    .search-button {
+        float: right;
+        padding: 6px;
+        width: 70px;
+        margin-top: 1px;
+        margin-right: 3px;
+        border: 1px solid #cccccc;
+        border-radius: 4px;      
+    }
+}
+
+#linknoteList, #mce_linknoteList {
     margin: 0;
     padding: 0;
     max-height: 450px;
@@ -841,18 +876,18 @@ h3 {
         padding: 0 3px;
         border-radius: 3px;
         border-bottom: 1px dashed #eee;
-        height: 45px;
-        line-height: 45px;
+        height: 45px;           
         div {
             float: left;
         }
 
 
         .link-title {
-            width: 250px;
+            width: 300px;
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
+            padding: 7px;
         }
         .link-process {
             float: right;
@@ -1024,7 +1059,8 @@ h3 {
     right: 0;
     bottom: 0;
     height: 30px;
-    border-top: 1px solid #eee;
+    border-top: 1px solid rgba(136, 72, 72, 0.5);
+    background-color: #eee;
 }
 
 #tagInputBox {
@@ -2227,8 +2263,22 @@ img::selection {
     dispaly: block;
     position: absolute;
     cursor: pointer;
+    right: 40px;
+    padding: 3px 10px;
+}
+
+#linkBtn {
+    display: block;
+    position: absolute;
+    cursor: pointer;
     right: 5px;
     padding: 3px 10px;
+    margin-top: 1px;
+}
+
+#linkBtn:hover {
+    background-color: #ccc;
+
 }
 
 // readonly
