1.  MD模式添加table快捷功能

--- a/public/themes/default.less
+++ b/public/themes/default.less
@@ -289,6 +289,7 @@ a.raw:hover {
     width: @noteListWidth;
     border-right: 1px solid @borderColor;
     // border-left: 1px solid @borderColor;
+    bottom: 30px;
 }
 
 #note {
