1. 修改针对文档内部跳转时，ID带有:的BUG（页眉，页尾ID） 2. 增加列表（有序和无序）在大纲可选显示 3. 修改MCE模式时，大纲链接不跳转BUG

--- a/public/themes/markdown/meditor.less
+++ b/public/themes/markdown/meditor.less
@@ -1420,3 +1420,12 @@ a.input-group-addon {
 
 }
 
+.list_flag {
+  color: black;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.list_flag:hover {
+  color: #0fb264;
+}
